--- a/src/main/resources/io/github/nhtuan10/mykafkatool/message-view.fxml
+++ b/src/main/resources/io/github/nhtuan10/mykafkatool/message-view.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import io.github.nhtuan10.mykafkatool.ui.control.DateTimePicker?>
-<?import io.github.nhtuan10.mykafkatool.ui.control.KafkaMessageTable?>
+<?import io.github.nhtuan10.mykafkatool.ui.messageview.KafkaMessageTable?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
