--- a/src/main/resources/io/github/nhtuan10/mykafkatool/add-connection-modal.fxml
+++ b/src/main/resources/io/github/nhtuan10/mykafkatool/add-connection-modal.fxml
@@ -23,14 +23,16 @@
                                     <content>
                                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                             <children>
-                                                <GridPane prefHeight="346.0" prefWidth="569.0" vgap="10.0"
+                                                <GridPane prefHeight="319.5" prefWidth="593.0" vgap="10.0"
                                                           AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
                                                           AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                     <columnConstraints>
                                                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="280.0"
-                                                                           minWidth="10.0" prefWidth="109.0"/>
+                                                                           minWidth="10.0" percentWidth="20.0"
+                                                                           prefWidth="109.0"/>
                                                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="520.0"
-                                                                           minWidth="10.0" prefWidth="460.0"/>
+                                                                           minWidth="10.0" percentWidth="80.0"
+                                                                           prefWidth="460.0"/>
                                                     </columnConstraints>
                                                     <rowConstraints>
                                                         <RowConstraints maxHeight="104.0" minHeight="45.0"
@@ -70,22 +72,24 @@
                                     <content>
                                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                             <children>
-                                                <GridPane layoutX="14.0" layoutY="-2.0" prefHeight="346.0"
-                                                          prefWidth="569.0" AnchorPane.bottomAnchor="0.0"
+                                                <GridPane layoutX="14.0" layoutY="-2.0" prefHeight="319.5"
+                                                          prefWidth="593.0" AnchorPane.bottomAnchor="0.0"
                                                           AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                                                          AnchorPane.topAnchor="-2.0">
+                                                          AnchorPane.topAnchor="0.0">
                                                     <columnConstraints>
-                                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="281.0"
-                                                                           minWidth="10.0" prefWidth="82.0"/>
-                                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="522.0"
-                                                                           minWidth="10.0" prefWidth="487.0"/>
+                                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="80.0"
+                                                                           minWidth="80.0" percentWidth="15.0"
+                                                                           prefWidth="80.0"/>
+                                                        <ColumnConstraints hgrow="ALWAYS" maxWidth="522.0"
+                                                                           minWidth="10.0" percentWidth="85.0"
+                                                                           prefWidth="487.0"/>
                                                     </columnConstraints>
                                                     <rowConstraints>
                                                         <RowConstraints maxHeight="110.0" minHeight="0.0"
-                                                                        prefHeight="27.0" vgrow="SOMETIMES"/>
+                                                                        percentHeight="10.0" prefHeight="27.0"
+                                                                        vgrow="SOMETIMES"/>
                                                         <RowConstraints maxHeight="272.0" minHeight="10.0"
-                                                                        prefHeight="267.0" vgrow="SOMETIMES"/>
-                                                        <RowConstraints minHeight="10.0" prefHeight="30.0"
+                                                                        percentHeight="90.0" prefHeight="267.0"
                                                                         vgrow="SOMETIMES"/>
                                                     </rowConstraints>
                                                     <children>
@@ -101,7 +105,6 @@
                                                             </GridPane.margin>
                                                             <content>
                                                                 <CodeArea fx:id="securityConfigTextArea"
-                                                                          prefHeight="118.0" prefWidth="552.0"
                                                                           wrapText="true"/>
                                                             </content>
                                                         </VirtualizedScrollPane>
@@ -120,7 +123,8 @@
                 </AnchorPane>
                 <AnchorPane maxHeight="40.0" minHeight="40.0" minWidth="0.0" prefHeight="40.0" prefWidth="598.0">
                     <children>
-                        <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+                        <HBox prefHeight="40.0" prefWidth="598.0" spacing="10.0" AnchorPane.bottomAnchor="0.0"
+                              AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <children>
                                 <Button fx:id="addBtn" mnemonicParsing="false" onAction="#add" text="OK">
                                     <HBox.margin>
