add disconnect/connect and clone connections functions; show statuses of connections; add icons to the dark/light theme and cluster tree; use Lombok @Locked annotation;

--- a/src/main/resources/io/github/nhtuan10/mykafkatool/main-view.fxml
+++ b/src/main/resources/io/github/nhtuan10/mykafkatool/main-view.fxml
@@ -43,10 +43,12 @@
                     </Menu>
                     <Menu mnemonicParsing="false" text="Appearance">
                         <items>
-                            <MenuItem mnemonicParsing="false" text="Dark Mode" onAction="#switchToDarkMode"/>
+                            <MenuItem fx:id="darkModeMenuItem" mnemonicParsing="false" text="Dark Mode"
+                                      onAction="#switchToDarkMode"/>
                         </items>
                         <items>
-                            <MenuItem mnemonicParsing="false" text="Light Mode" onAction="#switchToLightMode"/>
+                            <MenuItem fx:id="lightModeMenuItem" mnemonicParsing="false" text="Light Mode"
+                                      onAction="#switchToLightMode"/>
                         </items>
 
                     </Menu>
