fix the cluster tree related bugs; change tree item font size

--- a/src/main/resources/io/github/nhtuan10/mykafkatool/dark-style.css
+++ b/src/main/resources/io/github/nhtuan10/mykafkatool/dark-style.css
@@ -69,3 +69,7 @@
     -fx-border-color: -color-border-default;
     -fx-border-width: 1;
 }
+
+.cluster-tree-root, .cluster-tree-item {
+    -fx-font-size: 15;
+}
