--- a/src/main/resources/io/github/nhtuan10/mykafkatool/main-view.fxml
+++ b/src/main/resources/io/github/nhtuan10/mykafkatool/main-view.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import io.github.nhtuan10.mykafkatool.ui.cg.ConsumerGroupTable?>
+<?import io.github.nhtuan10.mykafkatool.ui.consumergroup.ConsumerGroupView?>
 <?import io.github.nhtuan10.mykafkatool.ui.messageview.KafkaMessageView?>
 <?import io.github.nhtuan10.mykafkatool.ui.schemaregistry.SchemaRegistryView?>
 <?import io.github.nhtuan10.mykafkatool.ui.topic.TopicAndPartitionPropertyView?>
@@ -417,22 +417,27 @@
                                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0"
                                                         prefWidth="200.0">
                                                 <children>
-                                                    <SplitPane orientation="VERTICAL" prefHeight="453.0"
-                                                               prefWidth="564.0" AnchorPane.bottomAnchor="0.0"
-                                                               AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                                                               AnchorPane.topAnchor="0.0">
-                                                        <items>
-                                                            <AnchorPane minHeight="0.0" minWidth="0.0"
-                                                                        prefHeight="480.0" prefWidth="727.0">
-                                                                <children>
-                                                                    <ConsumerGroupTable fx:id="consumerGroupOffsetTable"
-                                                                                        layoutX="-2.0" layoutY="-58.0"
-                                                                                        prefHeight="484.0"
-                                                                                        prefWidth="729.0"
-                                                                                        AnchorPane.bottomAnchor="0.0"
-                                                                                        AnchorPane.leftAnchor="-2.0"
-                                                                                        AnchorPane.rightAnchor="0.0"
-                                                                                        AnchorPane.topAnchor="2.0"/>
+                                                    <ConsumerGroupView fx:id="consumerGroupView"
+                                                                       AnchorPane.topAnchor="0.0"
+                                                                       AnchorPane.bottomAnchor="0.0"
+                                                                       AnchorPane.leftAnchor="0.0"
+                                                                       AnchorPane.rightAnchor="0.0"/>
+                                                    <!--                                                    <SplitPane orientation="VERTICAL" prefHeight="453.0"-->
+                                                    <!--                                                               prefWidth="564.0" AnchorPane.bottomAnchor="0.0"-->
+                                                    <!--                                                               AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"-->
+                                                    <!--                                                               AnchorPane.topAnchor="0.0">-->
+                                                    <!--                                                        <items>-->
+                                                    <!--                                                            <AnchorPane minHeight="0.0" minWidth="0.0"-->
+                                                    <!--                                                                        prefHeight="480.0" prefWidth="727.0">-->
+                                                    <!--                                                                <children>-->
+                                                    <!--                                                                    <ConsumerGroupIDTable fx:id="consumerGroupOffsetTable"-->
+                                                    <!--                                                                                          layoutX="-2.0" layoutY="-58.0"-->
+                                                    <!--                                                                                          prefHeight="484.0"-->
+                                                    <!--                                                                                          prefWidth="729.0"-->
+                                                    <!--                                                                                          AnchorPane.bottomAnchor="0.0"-->
+                                                    <!--                                                                                          AnchorPane.leftAnchor="-2.0"-->
+                                                    <!--                                                                                          AnchorPane.rightAnchor="0.0"-->
+                                                    <!--                                                                                          AnchorPane.topAnchor="2.0"/>-->
                                                                     <!--                                                                   <columns> -->
                                                                     <!--                                                                       <TableColumn prefWidth="75.0" text="Topic" /> -->
                                                                     <!--                                                                       <TableColumn prefWidth="75.0" text="Partition" /> -->
@@ -442,10 +447,10 @@
                                                                     <!--                                                                       <TableColumn prefWidth="75.0" text="Lag" /> -->
                                                                     <!--                                                                       <TableColumn prefWidth="75.0" text="Last Commit" /> -->
                                                                     <!--                                                                   </columns> -->
-                                                                </children>
-                                                            </AnchorPane>
-                                                        </items>
-                                                    </SplitPane>
+                                                    <!--                                                                </children>-->
+                                                    <!--                                                            </AnchorPane>-->
+                                                    <!--                                                        </items>-->
+                                                    <!--                                                    </SplitPane>-->
                                                 </children>
                                             </AnchorPane>
                                         </content>
