--- a/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/consumer-group-view.fxml
+++ b/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/consumer-group-view.fxml
@@ -2,19 +2,38 @@
 
 <!-- fx:controller="control.ui.io.github.nhtuan10.mykafkatool.EditableTableControl" -->
 
-<?import io.github.nhtuan10.mykafkatool.ui.consumergroup.ConsumerGroupIDTable?>
+<?import io.github.nhtuan10.mykafkatool.ui.consumergroup.ConsumerGroupTable?>
+<?import io.github.nhtuan10.mykafkatool.ui.consumergroup.ConsumerTable?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.*?>
-<fx:root type="BorderPane" prefHeight="627.5" prefWidth="995.0" xmlns="http://javafx.com/javafx/23.0.1"
+<fx:root prefHeight="627.5" prefWidth="995.0" type="BorderPane" xmlns="http://javafx.com/javafx/17.0.12"
          xmlns:fx="http://javafx.com/fxml/1">
+    <top>
+        <HBox>
+            <ToggleButton fx:id="toggleConsumerView" text="Consumer View">
+                <HBox.margin>
+                    <Insets left="5.0" top="5.0"/>
+                </HBox.margin>
+            </ToggleButton>
+            <Label fx:id="consumerGroupId">
+                <HBox.margin>
+                    <Insets left="5.0" top="5.0"/>
+                </HBox.margin>
+            </Label>
+            <!--                   text="${consumerGroupId}"-->
+        </HBox>
+    </top>
     <center>
-        <ConsumerGroupIDTable fx:id="consumerGroupIDTable"
-                              layoutX="-2.0" layoutY="-58.0"
-                              prefHeight="484.0"
-                              prefWidth="729.0"
-                              AnchorPane.bottomAnchor="0.0"
-                              AnchorPane.leftAnchor="-2.0"
-                              AnchorPane.rightAnchor="0.0"
-                              AnchorPane.topAnchor="2.0"/>
+        <AnchorPane>
+            <ConsumerTable fx:id="consumerTable" layoutX="-2.0" layoutY="-58.0" prefHeight="484.0" prefWidth="729.0"
+                           AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-2.0" AnchorPane.rightAnchor="0.0"
+                           AnchorPane.topAnchor="2.0"/>
+            <ConsumerGroupTable fx:id="consumerGroupTable" layoutX="-2.0" layoutY="-58.0" prefHeight="484.0"
+                                prefWidth="729.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-2.0"
+                                AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="2.0"/>
+        </AnchorPane>
     </center>
 
 </fx:root>
