show consumer group (CG) details for empty CG; add groupId to the consumer table; change some UI styles

--- a/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/light-style.css
+++ b/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/light-style.css
@@ -60,4 +60,9 @@
 
 .cluster-tree-root, .cluster-tree-item {
     -fx-font-size: 15;
+    -fx-font-weight: bold;
+}
+
+.cg-info-label {
+    -fx-font-size: 15;
 }
