--- a/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/consumer-group-view.fxml
+++ b/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/consumer-group-view.fxml
@@ -17,7 +17,7 @@
                     <Insets left="5.0" top="5.0"/>
                 </HBox.margin>
             </ToggleButton>
-            <Label fx:id="infoLabel">
+            <Label fx:id="infoLabel" styleClass="cg-info-label">
                 <HBox.margin>
                     <Insets left="5.0" top="5.0"/>
                 </HBox.margin>
