--- a/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/dark-style.css
+++ b/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/dark-style.css
@@ -72,4 +72,9 @@
 
 .cluster-tree-root, .cluster-tree-item {
     -fx-font-size: 15;
+    -fx-font-weight: bold;
+}
+
+.cg-info-label {
+    -fx-font-size: 15;
 }
