--- a/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/consumer-group-view.fxml
+++ b/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/consumer-group-view.fxml
@@ -12,7 +12,7 @@
          xmlns:fx="http://javafx.com/fxml/1">
     <top>
         <HBox>
-            <ToggleButton fx:id="toggleConsumerView" text="Show Consumer">
+            <ToggleButton fx:id="toggleConsumerView" text="Show Consumers">
                 <HBox.margin>
                     <Insets left="5.0" top="5.0"/>
                 </HBox.margin>
@@ -36,7 +36,7 @@
                         <Insets left="5.0"/>
                     </HBox.margin>
                 </ComboBox>
-                <DateTimePicker fx:id="resetCGStartDateTimePicker" prefWidth="150.0">
+                <DateTimePicker fx:id="resetCGStartDateTimePicker" prefWidth="200.0">
                     <HBox.margin>
                         <Insets left="5.0"/>
                     </HBox.margin>
@@ -47,7 +47,7 @@
                     </HBox.margin>
                 </Button>
                 <padding>
-                    <Insets left="5.0" right="5.0" top="5.0" bottom="5.0"/>
+                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                 </padding>
             </HBox>
             <!--                   text="${consumerGroupId}"-->
