refactor code; change CodeArea selection and disabled color

--- a/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/dark-style.css
+++ b/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/dark-style.css
@@ -65,6 +65,10 @@
     -fx-background-color: -color-bg-default;
 }
 
+.styled-text-area:disabled {
+    -fx-opacity: 0.4;
+}
+
 .bordered-container {
     -fx-border-color: -color-border-default;
     -fx-border-width: 1;
