--- a/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/light-style.css
+++ b/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/light-style.css
@@ -53,6 +53,19 @@
     -fx-background-color: -color-bg-default;
 }
 
+/*.styled-text-area:focused {*/
+/*    -fx-focus-color: #0969da;*/
+/*    -fx-prompt-text-fill: transparent;*/
+/*}*/
+.styled-text-area .selection {
+    -fx-fill: -color-accent-subtle;
+    /*-fx-fill: red;*/
+}
+
+.styled-text-area:disabled {
+    -fx-opacity: 0.4;
+}
+
 .bordered-container {
     -fx-border-color: -color-border-default;
     -fx-border-width: 1;
