--- a/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/message-view.fxml
+++ b/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/message-view.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import io.github.nhtuan10.mykafkatool.ui.control.DateTimePicker?>
+<?import io.github.nhtuan10.mykafkatool.ui.control.NonNegativeIntTextField?>
 <?import io.github.nhtuan10.mykafkatool.ui.messageview.KafkaMessageTable?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
@@ -88,11 +89,12 @@
                                 <Insets left="5.0" top="5.0"/>
                             </FlowPane.margin>
                         </ComboBox>
-                        <TextField fx:id="maxMessagesTextField" prefHeight="26.0" prefWidth="72.0" text="1000">
+                        <NonNegativeIntTextField fx:id="maxMessagesTextField" prefHeight="26.0" prefWidth="72.0"
+                                                 text="1000">
                             <FlowPane.margin>
                                 <Insets left="10.0" top="5.0"/>
                             </FlowPane.margin>
-                        </TextField>
+                        </NonNegativeIntTextField>
                         <!--                                                      <Label text="Filter">-->
                         <!--                                                         <FlowPane.margin>-->
                         <!--                                                            <Insets left="10.0" top="5.0" />-->
